package il.co.ilrd.VM;

public interface ProductProtoTypes {
        public double getPrice();
        public String getName();
    }


