package il.co.ilrd.VM;

public interface VMDisplay {
    public void output(String msg);
}
